
U2F V1.1:

1.1.0-beta3:
* Verify pairing mode bits and service data

1.1.0-beta2:
* switch to using enum class and !operator for ReturnValue 
* Increase timeout after transportlimits test.
* allow for absent DIS on V1.0

1.1.0-beta1
* Automatically detect if device is connected or not in WinRT backend.
* Add receiving of Advertisements.
* Add WinRT backend
* Add configuration options for U2F version
* Add Verify() and Report() functions to validate device and display some information.
* Enable ISO ISO7816-4 by default.
* No longer support USB behavior. This was default and didn't make sense.