@@ -248,3 +248,5 @@ ModelManifest.xml
 /u2f-tests/BLE/bledevicewinrt.obj.enc
 /u2f-tests/BLE/bleapiwinrt.obj.enc
 /u2f-tests/BLE/BLECertificationTool.exe
+/u2f-tests/BLE/crap.exe
+/u2f-tests/BLE/bletransporttests.obj.enc
